sonnh: cherry pick lehonghai cms detail service and clean up