@@ -9,9 +9,11 @@ import com.nhohantu.tcbookbe.cms.repository.ICmsTagRepository;
 import com.nhohantu.tcbookbe.common.model.builder.ResponseBuilder;
 import com.nhohantu.tcbookbe.common.model.builder.ResponseDTO;
 import com.nhohantu.tcbookbe.common.model.entity.*;
+import com.nhohantu.tcbookbe.common.model.entity.TagModel;
 import com.nhohantu.tcbookbe.common.model.enums.StatusCodeEnum;
 import com.nhohantu.tcbookbe.common.service.UserBasicInfoService;
 import com.nhohantu.tcbookbe.common.utils.Constant;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
@@ -20,6 +22,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Log4j2
@@ -32,6 +35,7 @@ public class CmsProductService {
     private final ICmsProductCategoryRepository productCategoryRepository;
     private final ICmsTagRepository tagRepository;
 
+    @Transactional
     public ResponseEntity<ResponseDTO<CmsCreateProductResponse>> createProduct(CmsCreateProductRequest request) {
         if (request.getCategoryIds() == null || request.getCategoryIds().isEmpty()) {
             throw new IllegalArgumentException("Sản phẩm phải thuộc ít nhất 1 category");
@@ -73,6 +77,10 @@ public class CmsProductService {
                 .rating(request.getRating())
                 .variations(request.getVariations() != null ? request.getVariations() : new HashMap<>())
                 .build();
+        if (request.getTagIds() != null && !request.getTagIds().isEmpty()) {
+            List<TagModel> tags = tagRepository.findAllById(request.getTagIds());
+            product.setTags(tags);
+        }
 
         // Map category
         List<ProductCategoryModel> productCategories = categories.stream().map(cat ->
@@ -108,9 +116,9 @@ public class CmsProductService {
         try {
             ProductModel result = productRepository.save(product);
 
-            List<CategoryModel> catList = result.getProductCategories().stream()
-                    .map(ProductCategoryModel::getCategory)
-                    .toList();
+            List<Long> tagIds = result.getTags().stream()
+                    .map(TagModel::getId)
+                    .collect(Collectors.toList());
 
             CmsCreateProductResponse response = CmsCreateProductResponse.builder()
                     .id(result.getId())
@@ -120,7 +128,8 @@ public class CmsProductService {
                     .quantity(result.getQuantity())
                     .active(result.getActive())
                     .mainImageUrl(result.getMainImageUrl())
-                    .categories(catList)
+                    .categories(categories)
+                    .tagIds(tagIds)
                     .build();
 
             return ResponseBuilder.okResponse("Tạo sản phẩm thành công", response, StatusCodeEnum.SUCCESS2000);
@@ -138,13 +147,80 @@ public class CmsProductService {
         return name.toLowerCase().replaceAll("[^a-z0-9]+", "-").replaceAll("-+$", "");
     }
 
+    @Transactional
+    public CmsCreateProductResponse updateProduct(Long id, CmsCreateProductRequest req) {
 
-//    public ResponseBuilder<ResponseDTO<CmsCreateProductResponse>> getProduct(Long id) {
-//        ProductModel product = productRepository.findById(id)
-//                .orElseThrow(() -> new RuntimeException("Không tìm thấy sản phẩm"));
-//        List<ProductCategoryModel> productCategories = productCategoryRepository.findAll()
-//                .stream().filter(pc -> pc.getProduct().getId().equals(id)).toList();
-//        List<CategoryModel> categories = productCategories.stream().map(ProductCategoryModel::getCategory).toList();
-//        return toResponse(product, categories);
-//    }
+        ProductModel product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        // === scalar fields ===
+        product.setName(req.getName());
+        product.setDescription(req.getDescription());
+        product.setPrice(req.getPrice());
+        product.setSalePrice(req.getSalePrice());
+        product.setQuantity(req.getQuantity());
+        product.setActive(req.getActive());
+        product.setMainImageUrl(req.getMainImageUrl());
+        product.setVideoUrl(req.getVideoUrl());
+        product.setUnit(req.getUnit());
+        product.setSku(req.getSku());
+        product.setBrand(req.getBrand());
+        product.setWeight(req.getWeight());
+        product.setDiscountPercentage(req.getDiscountPercentage());
+        product.setRating(req.getRating());
+        product.setVariations(req.getVariations());
+
+        // === categories ===
+        if (req.getCategoryIds() != null) {
+            product.getProductCategories().clear();
+
+            List<CategoryModel> categories = categoryRepository.findAllById(req.getCategoryIds());
+            categories.forEach(cat -> {
+                ProductCategoryModel pcm = new ProductCategoryModel();
+                pcm.setProduct(product);
+                pcm.setCategory(cat);
+                product.getProductCategories().add(pcm);
+            });
+        }
+
+        // === tags ===
+        if (req.getTagIds() != null) {
+            List<TagModel> tags = tagRepository.findAllById(req.getTagIds());
+            product.setTags(tags);
+        }
+        ProductModel saved = productRepository.save(product);
+
+        // === map sang DTO ===
+        return CmsCreateProductResponse.builder()
+                .id(saved.getId())
+                .name(saved.getName())
+                .description(saved.getDescription())
+                .price(saved.getPrice())
+//                .salePrice(saved.getSalePrice())
+                .quantity(saved.getQuantity())
+                .active(saved.getActive())
+                .mainImageUrl(saved.getMainImageUrl())
+//                .videoUrl(saved.getVideoUrl())
+//                .unit(saved.getUnit())
+//                .sku(saved.getSku())
+//                .brand(saved.getBrand())
+//                .weight(saved.getWeight())
+//                .discountPercentage(saved.getDiscountPercentage())
+//                .rating(saved.getRating())
+//                .variations(saved.getVariations())
+//                .categoryIds(saved.getProductCategories().stream()
+//                        .map(pc -> pc.getCategory().getId())
+//                        .toList())
+                .tagIds(saved.getTags().stream()
+                        .map(TagModel::getId)
+                        .toList())
+                .build();
+    }
+
+    public void deleteProduct(Long id) {
+        ProductModel productModel = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Id not found for delete"));
+
+         productRepository.delete(productModel);
+    }
 }
